# emul8tor

./: .gitignore
chip8/: CMakeLists.txt  Core.h  Game.cpp  InputHandler.cpp  chip8.sln
chip8/chip8/: Core.cpp  Core.h  Game.cpp  InputHandler.h  chip8.vcxproj  chip8.vcxproj.filters
chip8/include/: Core.h  InputHandler.h  Screen.h
chip8/src/: Core.cpp  Game.cpp  InputHandler.cpp  Screen.cpp
